tests/ui/wf/ice-wf-missing-span-in-error-130012.stderr
error[E0582]: binding for associated type `Assoc` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/ice-wf-missing-span-in-error-130012.rs:11:28
   |
LL | trait MyTrait: for<'a> Fun<Assoc = &'a ()> {}
   |                            ^^^^^^^^^^^^^^

error[E0582]: binding for associated type `Assoc` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/ice-wf-missing-span-in-error-130012.rs:11:28
   |
LL | trait MyTrait: for<'a> Fun<Assoc = &'a ()> {}
   |                            ^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0582]: binding for associated type `Assoc` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/ice-wf-missing-span-in-error-130012.rs:11:28
   |
LL | trait MyTrait: for<'a> Fun<Assoc = &'a ()> {}
   |                            ^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0582]: binding for associated type `Assoc` references lifetime `'b`, which does not appear in the trait input types
  --> $DIR/ice-wf-missing-span-in-error-130012.rs:16:21
   |
LL | impl<F: for<'b> Fun<Assoc = &'b ()>> MyTrait for F {}
   |                     ^^^^^^^^^^^^^^

error[E0308]: mismatched types
   |
   = note: expected reference `&()`
              found reference `&'a ()`
note: the lifetime requirement is introduced here
  --> $DIR/ice-wf-missing-span-in-error-130012.rs:11:28
   |
LL | trait MyTrait: for<'a> Fun<Assoc = &'a ()> {}
   |                            ^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/ice-wf-missing-span-in-error-130012.rs:16:50
   |
LL | impl<F: for<'b> Fun<Assoc = &'b ()>> MyTrait for F {}
   |                                                  ^ lifetime mismatch
   |
   = note: expected reference `&()`
              found reference `&'b ()`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0582.
For more information about an error, try `rustc --explain E0308`.
